cmake_minimum_required(VERSION 3.22)
project(tinyrpc)

set(CMAKE_CXX_STANDARD 17)
aux_source_directory(./net SRC)
aux_source_directory(./common SRC)
aux_source_directory(./net/tcp SRC)
aux_source_directory(./net/coder SRC)
aux_source_directory(./net/rpc SRC)
set(LIBRARY_OUTPUT_PATH ${LIBPATH})
link_libraries(tinyxml)
link_libraries(protobuf)
add_library(rpc STATIC ${SRC})